--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
+    "moments": "^0.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -38,5 +40,9 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
