--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGO_URI = "mongodb+srv://srishylam125:rksrishylam@srishylam.0wf14ig.mongodb.net/mern-expenses"
 PORT = 8000
+NODE_ENV=production
+JWT_SECRET=srishylamrk
