--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "expenses-tracker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"cd backend && node app.js"
+    "start":"node app.js"
   },
   "author": "",
   "license": "ISC",
