--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "heroku-postbuild": "cd ../frontend && npm install && npm run build && npm run dev cp -r build ../backend/build"
+    "heroku-postbuild": "cd ../frontend && npm install && npm run build && cp -r build ../backend/build"
   },
   "keywords": [],
   "author": "",
