--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "heroku-postbuild": "cd ../frontend && npm install && npm run build && cp -r build ../backend/build"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
