--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/app.js"
+    "backend": "node backend/app.js",
+    "frontend": "node frontend/npm run dev"
   },
   "author": "",
   "license": "ISC",
