--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend": "node backend/app.js",
-    "frontend": "node frontend/npm run dev"
+    "frontend": "cd frontend && npm run dev"
   },
   "author": "",
   "license": "ISC",
