--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend": "node backend/app.js",
+    "backend": "cd backend && node app.js",
     "frontend": "cd frontend && npm run dev"
   },
   "author": "",
