--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "backend": "cd backend && node app.js",
-    "frontend": "cd frontend && npm run dev"
+    "start": "cd backend && node app.js",
+    "dev": "cd frontend && npm run dev"
   },
   "author": "",
   "license": "ISC",
