--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && (cd ../backend && npm install)",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "npm run dev"
+    "start-frontend": "cd frontend && npm run dev"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@reduxjs/toolkit": "^2.2.6",
-    "@tanstack/react-query": "^5.49.2",
-    "@tanstack/react-query-devtools": "^5.49.2",
+    "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-query-devtools": "^5.50.1",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "formik": "^2.4.6",
